# mxnet-build

./: .gitignore  .gitmodules  README.md  build-ios.sh  build-mxnet.sh  ios_adapt.py
ios/: .gitignore  CMakeLists.txt  build-ios.sh
mac/: .gitignore  build-mac.sh  test.c
test-ios/: main.c  run.sh
